<?xml version="1.0"?>
<package>
  <name>ZeroMQ</name>
  <version>0.0.0</version>
  <description>A fixed version of zmq with catkin capabilities</description>

  <maintainer email="qrouxel@labri.fr">cf MAINTAINERS</maintainer>
  <author email="multiples@xxx.com">cf AUTHORS</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
